--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="body">
     <div id="footer">
       <h1 id="head">Stocker</h1>
-      <h1 id="datemonth">hello</h1>
+      <h1 id="datemonth"></h1>
       <li class="dotsparent">
         <a href="" class="dots"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
       </li>
