--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
           <h3 class="diff" id="diff3">dif</h3>
         </div>
       </div>
+
+
+      <div class="stock_list">
+        <div class="name">
+          <h1 class="symb4">Stock sy</h1>
+          <h4 class="comp name4">Company name</h4>
+        </div>
+
+        <div class="price">
+          <h1 class="price4">Price</h1>
+          <h3 class="diff" id="diff4">dif</h3>
+        </div>
+      </div>
     </main>
 
       
