--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <li class="dotsparent">
         <a href="" class="dots"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a>
       </li>
-      <h3 id="header" title="bgmi"></h3>
-      <input type="text" id="inputdata"  placeholder="Search"  >
+      <!-- <h3 id="header" title="bgmi"></h3>
+      <input type="text" id="inputdata"  placeholder="Search"  > -->
     </div>
     
     <div id="items">
