--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
 
+    <link href="./download.jpg" rel="icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -98,6 +99,6 @@
     </main>
 
       
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 </body>
 </html>
